--- a/client/src/assets/styles/main.sass
+++ b/client/src/assets/styles/main.sass
@@ -7,6 +7,7 @@
 
 @import "2-modules/file-meta"
 @import "2-modules/dropdown"
+@import "2-modules/scrollbar"
 
 @import "3-sections/homepage"
 @import "3-sections/header"
@@ -16,5 +17,6 @@
 @import "3-sections/main-images"
 @import "3-sections/main-doc"
 @import "3-sections/main"
+@import "3-sections/signup"
 
 @import "4-layouts/layout"
