--- a/client/src/assets/styles/3-sections/_header.scss
+++ b/client/src/assets/styles/3-sections/_header.scss
@@ -4,8 +4,8 @@
   float: left;
 }
 .arrow-down {
-  width: 0;
-  height: 0;
+  // width: 0;
+  // height: 0;
   border-left: 8px solid transparent;
   border-right: 8px solid transparent;
   border-top: 5px solid $gray-light;
@@ -48,9 +48,11 @@ nav{
   position: relative;
 }
 .search-icon{
+  width: 15px;
+  color: $gray-lighter;
   position: absolute;
-  left: 60px;
-  top: 19px;
+  left: 57px;
+  top: 21px;
 }
 .search-input{
   border-radius: 50px;
