--- a/client/src/assets/styles/3-sections/_homepage.scss
+++ b/client/src/assets/styles/3-sections/_homepage.scss
@@ -63,3 +63,22 @@
   text-align: center;
   color: $gray-light;
 }
+@media (max-width: 544px){
+  .homepage{
+    h1{
+      text-align: center;
+      margin-top: 20px;
+      font-size: 2em;
+    }
+    .signup-btn{
+      margin: 10px 33.33%;
+    }
+    .hp-img{
+      width: 90%;
+      margin: 20px 5%;
+    }
+  }
+  .hp-features{
+    font-size: 1em;
+  }
+}
