--- a/server/src/views/mail.html
+++ b/server/src/views/mail.html
@@ -11,7 +11,7 @@
 				<tbody><tr>
 				<td align="left" valign="bottom" height="50">
 				<a href="http://docstash.heroku.com" title="Visit Docstash" target="_blank">
-						<img width="150" height="50" border="0" src="./logo.svg" style="text-decoration:none;display:block;outline:none" class="CToWUd">
+						<img width="150" height="50" border="0" src="https://raw.githubusercontent.com/rakshans1/docstash/master/client/src/assets/img/logo.png" style="text-decoration:none;display:block;outline:none" class="CToWUd">
 						</a>
 						</td>
 						</tr>
