--- a/server/src/views/mail.html
+++ b/server/src/views/mail.html
@@ -11,7 +11,7 @@
 				<tbody><tr>
 				<td align="left" valign="bottom" height="50">
 				<a href="http://docstash.heroku.com" title="Visit Docstash" target="_blank">
-						<img width="150" height="50" border="0" src="https://raw.githubusercontent.com/rakshans1/docstash/master/client/src/assets/img/logo.png" style="text-decoration:none;display:block;outline:none" class="CToWUd">
+						<img width="150" height="50" border="0" src="https://raw.githubusercontent.com/rakshans1/docstash/master/server/src/views/logo.png" style="text-decoration:none;display:block;outline:none" class="CToWUd">
 						</a>
 						</td>
 						</tr>
@@ -38,7 +38,7 @@
 				<table width="400">
 				<tbody><tr>
 				<td style="padding:0 0 0 0;font-family:helvetica neue,helvetica,arial,sans-serif;font-weight:bold;font-size:25px;line-height:36px;color:#444444;max-width:510px;overflow:hidden;text-overflow:ellipsis">
-				Hello, Name <br>Welcome to <span style="color:#007ee5">Docstash</span>
+				Hello, <%= name %> <br>Welcome to <span style="color:#007ee5">Docstash</span>
 				</td>
 				</tr>
 				</tbody></table>
@@ -59,7 +59,7 @@
 				<table width="100%" border="0" cellpadding="0" cellspacing="0">
 				<tbody><tr>
 				<td align="center" style="padding:14px 20px 14px 20px;background-color:#007ee5;border-radius:4px">
-				<a href=" "    " style="font-family:helvetica neue,helvetica,arial,sans-serif;font-weight:bold;font-size:18px;line-height:22px;color:#ffffff;text-decoration:none;display:block;text-align:center;max-width:400px;overflow:hidden;text-overflow:ellipsis" target="_blank">
+				<a href="docstash.herokuapp.com"    " style="font-family:helvetica neue,helvetica,arial,sans-serif;font-weight:bold;font-size:18px;line-height:22px;color:#ffffff;text-decoration:none;display:block;text-align:center;max-width:400px;overflow:hidden;text-overflow:ellipsis" target="_blank">
 				View your files
 				</a>
 				</td>
