--- a/client/src/assets/styles/3-sections/_header.scss
+++ b/client/src/assets/styles/3-sections/_header.scss
@@ -42,7 +42,7 @@ nav{
   border-bottom: 1px solid darken($light, 10);
 }
 .navbar{
-  padding: 10px 20px;
+  padding: 5px 20px;
 }
 .search{
   position: relative;
@@ -74,11 +74,15 @@ nav{
   position: relative;
 }
 .avatar-image{
-  width: 50px;
+  width: 45px;
   margin: 5px 20px;
   border-radius: 50px;
   border: 1px solid lighten($secondary, 30%);
   background: $light;
+  &:hover{
+    border: none;
+    box-shadow: 0px 0px 1px 5px lighten($gray-light, 30%);
+  }
 }
 .avatar-drop{
   position: absolute;
@@ -109,6 +113,20 @@ nav{
   }
   nav{
     border-bottom: none;
+  }
+  .navbar{
+    padding: 15px 20px;
+  }
+  .avatar-image{
+    width: 45px;
+    margin: 5px 20px;
+    border-radius: 50px;
+    border: 1px solid lighten($secondary, 30%);
+    background: $light;
+    &:hover{
+      border: none;
+      box-shadow: 0px 0px 1px 3px lighten($gray-light, 30%);
+    }
   }
 }
 
