--- a/client/src/assets/styles/3-sections/_signup.scss
+++ b/client/src/assets/styles/3-sections/_signup.scss
@@ -1,3 +1,11 @@
+.login_a{
+  color: $gray-dark;
+  cursor: pointer;
+  text-align: right;
+  &:hover{
+    color: $white;
+  }
+}
 .btn-social {
   transition: all 0.2s ease-in-out;
   display: inline-block;
