--- a/client/src/assets/icon/flaticon.css
+++ b/client/src/assets/icon/flaticon.css
@@ -1,6 +1,6 @@
 	/*
   	Flaticon icon font: Flaticon
-  	Creation date: 03/08/2016 08:50
+  	Creation date: 27/08/2016 17:10
   	*/
 
 @font-face {
@@ -33,10 +33,11 @@ margin-left: 20px;
 .flaticon-file:before { content: "\f101"; }
 .flaticon-file-1:before { content: "\f102"; }
 .flaticon-folder:before { content: "\f103"; }
-.flaticon-folder-1:before { content: "\f104"; }
-.flaticon-folder-2:before { content: "\f105"; }
-.flaticon-interface:before { content: "\f106"; }
+.flaticon-folder-2:before { content: "\f104"; }
+.flaticon-interface:before { content: "\f105"; }
+.flaticon-link:before { content: "\f106"; }
 .flaticon-multimedia:before { content: "\f107"; }
 .flaticon-music:before { content: "\f108"; }
 .flaticon-photo:before { content: "\f109"; }
 .flaticon-square:before { content: "\f10a"; }
+.flaticon-torrent:before { content: "\f10b"; }
