--- a/client/src/assets/styles/3-sections/_sidebar.scss
+++ b/client/src/assets/styles/3-sections/_sidebar.scss
@@ -4,21 +4,32 @@
   background-color: $light;
   height: 100vh;
   [class^="flaticon-"]:before, [class*=" flaticon-"]:before, [class^="flaticon-"]:after, [class*=" flaticon-"]:after {
-    font-size: 1em;
+    font-size: 1.4em;
+    font-weight: 500;
   }
-}
+  i{
+    position: absolute;
+    left: 8px;
+  }
   .active{
     color: darken($secondary, 10);
   }
+}
+
   .sidebar-a{
     color: darken($gray-light, 10);
     text-decoration: none;
     font-weight: 600;
     margin-left: 5px;
     font-size: 0.8em;
+    text-align: center;
+    text-decoration: none;
     &:hover{
       text-decoration: none;
       color: $secondary;
+    }
+    &:focus{
+      text-decoration: none;
     }
   }
   .sidebar-text{
@@ -32,8 +43,8 @@
   .sidebar-ul{
     margin: 10px 0;
   }
-  .sideba-li{
-    margin: 5px 10px;
+  .sidebar-li{
+    margin: 5px 30px;
     text-align: left;
   }
   .usage{
