--- a/client/src/assets/styles/1-base/_vars.sass
+++ b/client/src/assets/styles/1-base/_vars.sass
@@ -16,3 +16,8 @@ $gray-lightest:         #f7f7f9 !default
 $delete: #d9534f !default
 $edit:     #5bc0de !default
 $added: darken($main, 10)
+
+
+//bb8
+// $bb8: #CD7640
+$bb8: #007ee5
