--- a/client/src/assets/styles/main.sass
+++ b/client/src/assets/styles/main.sass
@@ -18,5 +18,6 @@
 @import "3-sections/main-doc"
 @import "3-sections/main"
 @import "3-sections/signup"
+@import "3-sections/404"
 
 @import "4-layouts/layout"
