--- a/client/src/assets/styles/3-sections/_recent.scss
+++ b/client/src/assets/styles/3-sections/_recent.scss
@@ -1,3 +1,6 @@
+.recent{
+  box-shadow: 0px 6px 15px 0 rgba(0, 0, 0, 0.2);
+}
 .recent-heading{
   margin-top: 30px;
   color: lighten($gray-light, 20);
