--- a/client/src/assets/styles/main.sass
+++ b/client/src/assets/styles/main.sass
@@ -1,5 +1,6 @@
 @import "0-tools/fonts"
 @import "0-tools/bootstrap/bootstrap"
+@import "0-tools/nprogress"
 // @import "0-tools/font-awesome/font-awesome"
 
 @import "1-base/vars"
@@ -8,6 +9,7 @@
 @import "2-modules/file-meta"
 @import "2-modules/dropdown"
 @import "2-modules/scrollbar"
+@import "2-modules/modal"
 
 @import "3-sections/homepage"
 @import "3-sections/header"
