--- a/client/src/assets/styles/3-sections/_signup.scss
+++ b/client/src/assets/styles/3-sections/_signup.scss
@@ -12,7 +12,7 @@
   background: none;
   border:none;
   color: #ffffff;
-  background: #40b4de;
+  background: $secondary;
   margin: 10px 35px;
   cursor: pointer;
   width: 50px;
@@ -461,14 +461,14 @@
 .button:hover,
 .button:focus {
   color: #ffffff;
-  background: #40b4de;
+  background: $secondary;
 }
 .button:active,
 .button.active {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-  background: #6bc5e6;
+  background: $secondary;
 }
 .application_wrapper {
   display: block;
