--- a/client/src/assets/styles/1-base/_vars.sass
+++ b/client/src/assets/styles/1-base/_vars.sass
@@ -1,8 +1,7 @@
 // $main: #007ee5
 // $main: #558C89
 // $main: #C63D0F
-// $main: #7D1935
-$main: #e09b1d
+$main: #7D1935
 
 
 
@@ -37,3 +36,13 @@ $brand-success:             #5cb85c !default
 $brand-info:                #5bc0de !default
 $brand-warning:             #f0ad4e !default
 $brand-danger:              #d9534f !default
+
+
+// Typography
+//
+// Font, line-height, and color for body text, headings, and more.
+
+$font-family-sans-serif:     "Montserrat", sans-serif !default
+$font-family-serif:          Georgia, "Times New Roman", Times, serif !default
+$font-family-monospace:      Menlo, Monaco, Consolas, "Courier New", monospace !default
+$font-family-base:           $font-family-sans-serif !default
