--- a/client/src/assets/styles/4-layouts/_layout.scss
+++ b/client/src/assets/styles/4-layouts/_layout.scss
@@ -1,11 +1,9 @@
-*{
-  box-sizing: border-box;
-}
 .shortner{
   margin-top: 50px;
 }
 .shortner_h1{
   color: $secondary;
+  margin: 50px 0 30px  0;
 }
 button:focus {
   outline:0;
