--- a/client/src/assets/styles/3-sections/_signup.scss
+++ b/client/src/assets/styles/3-sections/_signup.scss
@@ -12,7 +12,7 @@
   background: none;
   border:none;
   color: #ffffff;
-  background: $secondary;
+  background: $gray-lighter;
   margin: 10px 35px;
   cursor: pointer;
   width: 50px;
