--- a/client/src/assets/styles/main.sass
+++ b/client/src/assets/styles/main.sass
@@ -10,6 +10,7 @@
 @import "2-modules/dropdown"
 @import "2-modules/scrollbar"
 @import "2-modules/modal"
+@import "2-modules/dropzone"
 
 @import "3-sections/homepage"
 @import "3-sections/header"
