--- a/client/src/assets/styles/1-base/_vars.sass
+++ b/client/src/assets/styles/1-base/_vars.sass
@@ -12,6 +12,7 @@ $green: lighten(desaturate(adjust-hue($main, -73.0980), 41.9355), 18.6275)
 $progress-gradient: darken(saturate(adjust-hue($main, 0.2858), 0), 31.9608)
 
 $white:                     #ffffff !default
+$black :                    #030f01
 $gray-dark:              #373a3c !default
 $gray:                      #55595c !default
 $gray-light:              #818a91 !default
