--- a/client/src/assets/styles/main.sass
+++ b/client/src/assets/styles/main.sass
@@ -22,5 +22,6 @@
 @import "3-sections/main"
 @import "3-sections/signup"
 @import "3-sections/404"
+@import "3-sections/torrent"
 
 @import "4-layouts/layout"
