--- a/client/src/assets/styles/main.sass
+++ b/client/src/assets/styles/main.sass
@@ -11,6 +11,7 @@
 @import "2-modules/scrollbar"
 @import "2-modules/modal"
 @import "2-modules/dropzone"
+@import "2-modules/spinner"
 
 @import "3-sections/homepage"
 @import "3-sections/header"
