--- a/client/src/assets/styles/3-sections/_torrent.scss
+++ b/client/src/assets/styles/3-sections/_torrent.scss
@@ -65,7 +65,6 @@
     width: 100%;
   }
   td {
-      max-width: 0;
       overflow: hidden;
       text-overflow: ellipsis;
       word-break: break-all;
@@ -73,22 +72,19 @@
       color: $gray;
   }
   td.table-file {
-      width: 77%;
-      font-size: 0.9em;
+    width: 77%;
+    font-size: 0.9em;
     @media (max-width: 544px){
-      width: 30%;
+      width: 100%;
     }
   }
   td.table-search {
     width: 70%;
     font-size: 0.9em;
     text-align: justify;
-    @media (max-width: 544px){
-      width: 30%;
-    }
   }
   .torrent-download{
-    width: 50px;
+    width: 80px;
   }
   .torrent-search-status{
     text-align: right;
@@ -105,5 +101,33 @@
   .torrent-inactive {
     font-size: 0.7em;
     text-align: center;
+  }
+  .file-name{
+    position: relative;
+    .torrent-progress-bar {
+      position: absolute;
+      background-color: transparentize($secondary, 0.8);
+      height: 20em;
+      top: -12px;
+      left: -12px;
+    }
+  }
+
+  @media (max-width: 544px){
+    table,thead,tbody,th,td,tr {
+		  display: block;
+	  }
+    thead tr {
+	  	position: absolute;
+	  	top: -9999px;
+	  	left: -9999px;
+	  }
+    td {
+	  	border: none;
+	  	border-bottom: 1px solid #eee;
+	  	position: relative;
+  		white-space: normal;
+  		text-align:left;
+  	}
   }
 }
