--- a/client/src/assets/styles/3-sections/_torrent.scss
+++ b/client/src/assets/styles/3-sections/_torrent.scss
@@ -45,6 +45,9 @@
   .torrent-zip{
     background: darken($green, 12);
   }
+  .torrent-downloads {
+    background: darken($green, 12);
+  }
   .torrent-action{
     padding: 7px 9px 7px 9px;
     margin: 10px 0 0 10px;
