Added Service Worker and manifest

--- a/client/src/assets/styles/0-tools/_fonts.scss
+++ b/client/src/assets/styles/0-tools/_fonts.scss
@@ -1,1 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat);
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Regular.ttf");
+}
