--- a/client/src/assets/styles/1-base/_vars.sass
+++ b/client/src/assets/styles/1-base/_vars.sass
@@ -50,5 +50,5 @@ $font-family-monospace:      Menlo, Monaco, Consolas, "Courier New", monospace !
 $font-family-base:           $font-family-sans-serif !default
 
 
-$body-bg:                    $white !default
+$body-bg:                    lighten($black, 92) !default
 $body-color:                 $gray-dark !default
