--- a/client/src/assets/styles/main.sass
+++ b/client/src/assets/styles/main.sass
@@ -12,6 +12,7 @@
 @import "2-modules/modal"
 @import "2-modules/dropzone"
 @import "2-modules/spinner"
+@import "2-modules/animations"
 
 @import "3-sections/homepage"
 @import "3-sections/header"
