--- a/client/src/assets/styles/3-sections/_recent.scss
+++ b/client/src/assets/styles/3-sections/_recent.scss
@@ -1,5 +1,7 @@
 .recent{
   box-shadow: 0px 6px 15px 0 rgba(0, 0, 0, 0.2);
+  background: $white;
+  animation: bounceInRight 3s ease-in;
 }
 .recent-heading{
   margin-top: 30px;
