--- a/client/src/assets/styles/4-layouts/_layout.scss
+++ b/client/src/assets/styles/4-layouts/_layout.scss
@@ -33,6 +33,7 @@ button:focus {
   right: -25px;
   color: $white;
   background-color: $secondary;
+  // animation: bounceIn 1.5s ease-in;
 }
 .padding-top {
   padding-top: 20px;
