--- a/client/src/assets/icon/_flaticon.scss
+++ b/client/src/assets/icon/_flaticon.scss
@@ -1,6 +1,6 @@
     /*
     Flaticon icon font: Flaticon
-    Creation date: 21/09/2016 18:41
+    Creation date: 22/09/2016 17:49
     */
 
     @font-face {
@@ -39,25 +39,27 @@
     .flaticon-draw:before { content: "\f100"; }
 .flaticon-file:before { content: "\f101"; }
 .flaticon-file-1:before { content: "\f102"; }
-.flaticon-folder-2:before { content: "\f103"; }
-.flaticon-interface:before { content: "\f104"; }
-.flaticon-link:before { content: "\f105"; }
-.flaticon-multimedia:before { content: "\f106"; }
-.flaticon-music:before { content: "\f107"; }
-.flaticon-photo:before { content: "\f108"; }
-.flaticon-square:before { content: "\f109"; }
-.flaticon-torrent:before { content: "\f10a"; }
-.flaticon-twitter:before { content: "\f10b"; }
+.flaticon-folder:before { content: "\f103"; }
+.flaticon-folder-2:before { content: "\f104"; }
+.flaticon-interface:before { content: "\f105"; }
+.flaticon-link:before { content: "\f106"; }
+.flaticon-multimedia:before { content: "\f107"; }
+.flaticon-music:before { content: "\f108"; }
+.flaticon-photo:before { content: "\f109"; }
+.flaticon-square:before { content: "\f10a"; }
+.flaticon-torrent:before { content: "\f10b"; }
+.flaticon-twitter:before { content: "\f10c"; }
     
     $font-Flaticon-draw: "\f100";
     $font-Flaticon-file: "\f101";
     $font-Flaticon-file-1: "\f102";
-    $font-Flaticon-folder-2: "\f103";
-    $font-Flaticon-interface: "\f104";
-    $font-Flaticon-link: "\f105";
-    $font-Flaticon-multimedia: "\f106";
-    $font-Flaticon-music: "\f107";
-    $font-Flaticon-photo: "\f108";
-    $font-Flaticon-square: "\f109";
-    $font-Flaticon-torrent: "\f10a";
-    $font-Flaticon-twitter: "\f10b";
+    $font-Flaticon-folder: "\f103";
+    $font-Flaticon-folder-2: "\f104";
+    $font-Flaticon-interface: "\f105";
+    $font-Flaticon-link: "\f106";
+    $font-Flaticon-multimedia: "\f107";
+    $font-Flaticon-music: "\f108";
+    $font-Flaticon-photo: "\f109";
+    $font-Flaticon-square: "\f10a";
+    $font-Flaticon-torrent: "\f10b";
+    $font-Flaticon-twitter: "\f10c";
