--- a/client/src/assets/styles/2-modules/_animations.scss
+++ b/client/src/assets/styles/2-modules/_animations.scss
@@ -8,6 +8,15 @@
         transform: translate3d(0, 0, 0);
     }
 }
+@keyframes slideInUp {
+    from {
+        transform: translate3d(0, 100%, 0);
+    }
+
+    to {
+        transform: translate3d(0, 0, 0);
+    }
+}
 @keyframes bounceInLeft {
     60%,
     75%,
