--- a/client/src/assets/styles/main.sass
+++ b/client/src/assets/styles/main.sass
@@ -14,6 +14,8 @@
 @import 2-modules/dropzone
 @import 2-modules/spinner
 @import 2-modules/animations
+@import 2-modules/chat
+
 
 @import 3-sections/homepage
 @import 3-sections/header
